Adding correct format for html for task 9

--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,12 +7,13 @@
         <H1>States</H1>
         <UL>
             {% for v in states.values()|sort(attribute='name') %}
-                <LI>{{v.id}}: <B>{{v.name}}</B></LI>
+            <LI>{{v.id}}: <B>{{v.name}}</B>
                 <UL>
-                    {% for city in v.cities|sort(attribute='name') %}
-                    <LI>{{city.id}}: <B>{{city.name}}</LI>
-                    {% endfor %}
+                        {% for city in v.cities|sort(attribute='name') %}
+                        <LI>{{city.id}}: <B>{{city.name}}</LI>
+                        {% endfor %}
                 </UL>
+            </LI>
             {% endfor %}
         </UL>
     </BODY>
