--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -16,7 +16,7 @@
         {% else %}
             <H1>State: {{state_obj.name}}</H1>
             <H3>Cities:</H3>
-            <UL>{% for city in state_obj.cities %}
+            <UL>{% for city in state_obj.cities|sort(attribute="name") %}
                     <LI>{{city.id}}: <B>{{city.name}}</B></LI>
             {% endfor %}</UL>
         {% endif %}
